# c-work

./: .gitignore  CMakeLists.txt  README.md  main.c
lib/: array_list.c  array_list.h
work_first/: classroom.c  classroom.h  staff.c  staff.h
work_second/: student_sys.c  student_sys.h  student_ws.c  student_ws.h  sys_driver.c  sys_driver.h
